# CLogik

./: .gitignore  CMakeLists.txt  README.md  lexer.c  lexer.h  main.c  test.txt
headers/: AST.h  condition.h  interpret.h  lexer.h  parser.h  print.h  token.h  validator.h  variable.h
src/: AST.c  condition.c  globalVariables.c  interpret.c  lexer.c  main.c  parenthesis.c  parser.c  print.c  token.c  validator.c  variable.c  variablesList.c
